--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 # Solidworks
 ~$*.SLD*
 matlabInVSCodeVariableInfo.csv
+
+pcb/e80_doppler/e80_doppler/History/
+
+pcb/e80_doppler/e80_doppler/__Previews/
